# InsightLang

./: -d  Cargo.toml
src/: APIServer.py  main.rs
src/Ai_server/: ai_model_server.py  models.py  server.py  utils.py
src/config/: database.rs
src/front/: index.html  result.html  test.html  transelate.html
src/front/assets/css/: main.css
src/front/assets/js/: file-upload.js  main.js
src/front/assets/sass/layout/: _fileSelect.scss
