[package]
name = "InsightLang"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"        # Actix 웹 프레임워크
serde = { version = "1.0", features = ["derive"] }    # JSON 직렬화 및 역직렬화
serde_json = "1.0.133"       # JSON 처리
reqwest = { version = "0.12.9", features = ["json"] }
axum = "0.7.7"
faker_rand = "0.1.1"
rand = "0.8.5"
surrealdb = "2.0.4"
thiserror = "2.0.3"
tokio = "1.40.0"

